--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "daisyui": "^2.15.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.8.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
